--- a/configure/lang/go/lang-go.Deployment.yaml
+++ b/configure/lang/go/lang-go.Deployment.yaml
@@ -40,7 +40,7 @@ spec:
               fieldPath: metadata.name
         - name: CACHE_DIR
           value: /mnt/cache/$(POD_NAME)
-        image: index.docker.io/sourcegraph/lang-go:insiders@sha256:556d3163389eaa244c996c5c22ea8f5f52c457cd0b94458b38ab8cda27d590b5
+        image: lang-go
         livenessProbe:
           initialDelaySeconds: 5
           tcpSocket:
