--- a/configure/lang/typescript/lang-typescript.Deployment.yaml
+++ b/configure/lang/typescript/lang-typescript.Deployment.yaml
@@ -36,7 +36,7 @@ spec:
               fieldPath: metadata.name
         - name: CACHE_DIR
           value: /home/node/cache/$(POD_NAME)
-        image: index.docker.io/sourcegraph/lang-typescript:insiders@sha256:9c77830895e9db9083a5dced0c1b5ac67bdfda15d2b6c73d16048cbcf850c2fc
+        image: lang-typescript
         imagePullPolicy: IfNotPresent
         livenessProbe:
           initialDelaySeconds: 10
